x/contracts/sdk-macros/tests/ui/fail/conflicting-type-state-schema.rs
// Copyright (C) 2024, Ava Labs, Inc. All rights reserved.
// See the file LICENSE for licensing terms.

use wasmlanche::state_schema;

struct Key;

state_schema! {
    Key => u8,
}

fn main() {}
